[package]
name = "robusto"
version = "0.1.0"
authors = ["Ken Suenobu <ksuenobu@fastmail.com>"]
edition = "2018"
description = "Robusto Jobs Library"
license = "Apache-2.0"
readme = "README.md"
repository = "https://www.github.com/KenSuenobu/pushrod/"
documentation = "http://docs.rs/crate/pushrod/"
keywords = ["etcd", "job", "jobserver"]
categories = ["job"]
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "robusto"
path = "src/lib.rs"

[dependencies]

